--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			height: 50px;
 			line-height: 50px;
 			font-size: 16px;
-			background:rgb(51,133,255);
+			background-color: rgb(51, 133, 255);
 			float: right;
 		}
 	</style>
