--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			line-height: 50px;
 			font-size: 16px;
 			background-color: rgb(51, 133, 255);
+			color: #fff;
 			float: right;
 		}
 	</style>
