--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			height: 50px;
 			line-height: 50px;
 			margin: 200px auto;
-			border: 1px solid #ccc;
+			border: 1px solid rgb(51, 133, 255);;
 
 		}
 		input[name="wd"]{
