--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
 	<input type="submit" value="百度">
 	</div>
 </form>
+	<div class="wrap">
+	<a href="https://developer.mozilla.org/zh-CN/">MDN</a>
+	</div>
 </body>
 </html>
