--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 			padding: 0;
 			border: 0;
 		}
-
+		.g {
+			margin: 200px auto;
+			text-align:center;
+		}
 		.wrap {
 			width: 80%;
 			height: 50px;
 			line-height: 50px;
-			margin: 200px auto;
+			margin: 10px auto;
 			border: 1px solid rgb(51, 133, 255);;
 
 		}
@@ -37,15 +40,14 @@
 		}
 	</style>
 </head>
-<body>
+<body class="g">
 <form name="f" action="https://www.baidu.com/s" method="get">
 	<div class="wrap">
 	<input type="text" name="wd">
 	<input type="submit" value="百度">
 	</div>
 </form>
-	<div class="wrap">
-	<a href="https://developer.mozilla.org/zh-CN/">MDN</a>
-	</div>
+<a href="https://developer.mozilla.org/zh-CN/">MDN</a>
+
 </body>
 </html>
