--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
 	</style>
 </head>
 <body class="g">
-<form name="f" action="https://www.baidu.com/s" method="get">
-	<div class="wrap">
-	<input type="text" name="wd">
-	<input type="submit" value="百度">
-	</div>
-</form>
-<a href="https://developer.mozilla.org/zh-CN/">MDN</a>
-
+  <form name="f" action="https://www.baidu.com/s" method="get">
+    <div class="wrap">
+      <input type="text" name="wd">
+      <input type="submit" value="百度">
+    </div>
+  </form>
+  <div class="link">
+    <a href="https://developer.mozilla.org/zh-CN/">MDN</a>
+  </div>
 </body>
 </html>
